--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>Opciones</h2>
         <form>
             <button id="btn-play">
-                <img id="btn-img" src="/Assets/playBtn.png" alt="">
+                <img id="btn-img" src="https://github.com/MoisesSunza/Chafa-tale/tree/main/Assets/playBtn.png" alt="">
             </button>
 
             <span>Velocidad del Jugador:</span>
@@ -32,9 +32,9 @@
 
             <span>Enemigo:</span>
             <select name="musica" id="music">
-                <option value="/Assets/Dogsong.wav" selected>Annoying Dog</option>
-                <option value="/Assets/Temmie Village.wav">Temmie</option>
-                <option value="/Assets/Song That Might Play When You Fight Sans.wav">sans.</option>
+                <option value="https://github.com/MoisesSunza/Chafa-tale/tree/main/Assets/Dogsong.wav" selected>Annoying Dog</option>
+                <option value="https://github.com/MoisesSunza/Chafa-tale/tree/main/Assets/Temmie Village.wav">Temmie</option>
+                <option value="https://github.com/MoisesSunza/Chafa-tale/tree/main/Assets/Song That Might Play When You Fight Sans.wav">sans.</option>
             </select>
 
             <br>
@@ -49,4 +49,5 @@
     
     <script src="/index.js"></script>
 </body>
+
 </html>
