--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="https://github.com/MoisesSunza/Chafa-tale/blob/main/main.css">
     <title>Chafa-tale</title>
 </head>
 <body>
@@ -51,3 +51,4 @@
 </body>
 
 </html>
+
