--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         </form>
     </div>
     
-    <script src="/index.js"></script>
+    <script src="https://github.com/MoisesSunza/Chafa-tale/blob/main/index.js"></script>
 </body>
 
 </html>
+
 
