--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://github.com/MoisesSunza/Chafa-tale/blob/main/main.css">
+    <link rel="stylesheet" href="https://moisessunza.github.io/Chafa-tale/main.css">
     <title>Chafa-tale</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
         <h2>Opciones</h2>
         <form>
             <button id="btn-play">
-                <img id="btn-img" src="https://github.com/MoisesSunza/Chafa-tale/tree/main/Assets/playBtn.png" alt="">
+                <img id="btn-img" src="https://moisessunza.github.io/Chafa-tale/Assets/playBtn.png" alt="">
             </button>
 
             <span>Velocidad del Jugador:</span>
@@ -32,9 +32,9 @@
 
             <span>Enemigo:</span>
             <select name="musica" id="music">
-                <option value="https://github.com/MoisesSunza/Chafa-tale/tree/main/Assets/Dogsong.wav" selected>Annoying Dog</option>
-                <option value="https://github.com/MoisesSunza/Chafa-tale/tree/main/Assets/Temmie Village.wav">Temmie</option>
-                <option value="https://github.com/MoisesSunza/Chafa-tale/tree/main/Assets/Song That Might Play When You Fight Sans.wav">sans.</option>
+                <option value="https://moisessunza.github.io/Chafa-tale/Assets/Dogsong.wav" selected>Annoying Dog</option>
+                <option value="https://moisessunza.github.io/Chafa-tale/Assets/Temmie Village.wav">Temmie</option>
+                <option value="https://moisessunza.github.io/Chafa-tale/Assets/Song That Might Play When You Fight Sans.wav">sans.</option>
             </select>
 
             <br>
@@ -47,9 +47,10 @@
         </form>
     </div>
     
-    <script src="https://github.com/MoisesSunza/Chafa-tale/blob/main/index.js"></script>
+    <script src="https://moisessunza.github.io/Chafa-tale/index.js"></script>
 </body>
 
 </html>
+
 
 
